x.yaml
---
# Source: tsi-node-setup/templates/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: tsi-setup-tsi-node-setup
  namespace: trusted-identity
spec:
  selector:
    matchLabels:
      name: ti-node-setup
  template:
    metadata:
      labels:
        name: ti-node-setup
        app: ti-node-setup
        version: v1
    spec:
      serviceAccountName: tsi-setup-admin-sa
      containers:
        - name: ti-node-setup
          image: "trustedseriviceidentity/node-setup:v1.3"
          imagePullPolicy: Always
          securityContext:
            privileged: true
          volumeMounts:
          - mountPath: /host/tsi-secure
            name: ti-volume
          - mountPath: /host/etc
            name: machine-id
            readOnly: true
          - mountPath: /host/logs
            name: host-logs
      volumes:
      - name: ti-volume
        hostPath:
          # directory location on host
           path: /tsi-secure
           # directory might not exist
           type: DirectoryOrCreate
      - name: machine-id
        hostPath:
          # directory location on host
           path: /etc
           type: Directory
      - name: host-logs
        hostPath:
          # directory location on host
           path: /var/log
           type: Directory
