apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apps
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: apps
    spec:
      containers:
        - image: tsidentity/tornjak-example-nodejs:v0.1
          name: node
          ports:
            - containerPort: 8080
          resources: {}
        - image: tsidentity/tornjak-example-python:v0.1
          name: py
          ports:
            - containerPort: 5000
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: apps
  namespace: default
spec:
  type: NodePort
  selector:
    app: apps
  ports:
    - name: "8001"
      port: 8001
      targetPort: 8080
    - name: "8000"
      port: 8000
      targetPort: 5000
status:
  loadBalancer: {}
