tornjak-http.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: tornjak
  name: tornjak-frontend-service
spec:
  type: LoadBalancer
  selector:
    app: spire-server
  ports:
    - name: tornjak-frontend
      port: 3000
      targetPort: 3000
